	Device fix

==Alpha16==
Updates:
	ResizeAPK Fully working, waiting for sign job (?)
	NewTranslation.py removed, included the TUTORIAL in the StudioAndroid post @XDA
	Permissions bug fixed (Utils weren't working anymore)

==Alpha17==
Updates:
	AddGovernor completed (?) for 6 governors
		Please test if you are building a kernel, with and without my tool please!
	Permissions now really fixed
	Upgraded BakSmali with a filechooser

==Alpha18==
Updates:
	SDK fix, should work on all platforms now.
	Some small things the user won't see

==Beta1==
-Utility tab: everything defined
-Development tab: everything defined
-APK Tab: everything defined
-Advanced tab:	--Aroma menu
	Bugs: ReCompiling on Windows (aapt error)
	Tasklist:
		Make everything more comfortable in use
		Add optimize images inside APK
		Finish BinaryPort
		Support [De]Odexing for single apps (not selecting a complete ROM)
		When every single bug is fixed, AromaMenu will get defined.
		When everything is done, and builds get weekly, I will make an Windows Installer, Mac PKG and Linux Debian package.

==Beta2==
	External output is now copied to the log too
	Fixed the bugs related to switching ^^
	Windows PyInstaller compile fix

==Beta3==
	added base for Romanian translation (vladtz)
	Fixed some bugs
	Updated De-ODEX with filechooser, fixed bugs
	Removed 7za usage, all is done with Python ZipFile now (Windows bugs fixed)
	Updated Dutch translation :)
	Fixed some bugs

==Beta4==
	Totally a windows update :)
	Windows exe updated
	Some bugs fixed related to Compiling
	Anything using Python as an external command now works.
	Windows (.exe) utilities added
	Some typos fixed
	Some bugs I don't remember

==Beta5==
	Build from Source: You can now add source files without having to edit the SA.py to use them properly
	Some small enhancements


I will switch to BETAs when every option is defined
Feature requests are always welcome :)
Also, if you want to contribute, don't hestitate to contact me!