@@ -1,0 +1,10 @@
+Sources = ['ICS-AOSP', 'AOKP', 'CM9', 'GUMMY', 'CodeNameAndroid', 'ParanoidAndroid', 'JB-AOSP', 'JB-AOKP']
+URL = ['repo init -u https://android.googlesource.com/platform/manifest -b android-4.0.1_r1', 'repo init -u git://github.com/AOKP/platform_manifest.git -b ics', 'repo init -u git://github.com/CyanogenMod/android.git -b ics', 'repo init -u https://github.com/teamgummy/platform_manifest.git -b master', 'repo init -u git://github.com/CNA/android_manifest.git -b mod-4.0.4', 'repo init -u git://github.com/ParanoidAndroid/android.git -b ics', 'repo init -u https://android.googlesource.com/platform/manifest -b android-4.1.1_r3', 'repo init -u git://github.com/AOKP/platform_manifest.git -b jb']
+
+# To add a new source, use this: (w/o the # )
+#
+# Sources.append('Source_name (WITHOUT SPACES!)')
+# URL.append('repo init *** command for that source')
+
+
+
